[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "django_crypto_fields"
version = "1.0.1"
description = "Add encrypted field classes and more to your Django models"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = [
    "django",
    "clinicedc",
    "edc",
    "clinical trials",
    "research",
    "data management",
    "esource",
    "encryption",
    "security"
]
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
maintainers = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = '>=3.12,<3.14'
dependencies = [
    "django-audit-fields>=1.1.0",
    "django-extensions>=4.1",
    "django-revision>=1.0.0",
    "edc-model-fields>=1.0.0",
    "edc-utils>=1.1.1",
    "pycryptodomex>=3.23.0",
]

[project.urls]
Homepage = "https://github.com/erikvw/django-crypto-fields"
Documentation = "https://django-crypto-fields.readthedocs.io/en/latest/"
Repository = "https://github.com/erikvw/django-crypto-fields.git"
Changelog = "https://github.com/erikvw/django-crypto-fields/blob/main/CHANGES"

[dependency-groups]
lint = [
    "black>=25.1.0",
    # "deptry>=0.23.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "ruff>=0.12.5",
]

docs = [
    "furo>=2025.7.19",
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "sphinx-inline-tabs>=2023.4.21",
]
test = [
    "coverage>=7.10.1",
    "tox-uv>=1.26.2",
    "edc-test-settings",
]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''^(.*\/)*\b(migrations)\b($|\/.*$)'''

[tool.isort]
profile = "black"
py_version = "312"
skip = [".tox", ".eggs", "migrations", "_version.py"]

[tool.coverage.run]
parallel = false
branch = true
source = ["django_crypto_fields"]

[tool.coverage.paths]
source = ["django_crypto_fields"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["requirements.txt"]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
