[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
source-exclude = ["bin"]
namespace = false

[project]
name = "django_crypto_fields"
version = "1.0.2"
description = "Add encrypted field classes and more to your Django models"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = [
    "django",
    "clinicedc",
    "edc",
    "clinical trials",
    "research",
    "data management",
    "esource",
    "encryption",
    "security"
]
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
maintainers = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = '>=3.12,<3.14'
dependencies = [
    "django-audit-fields>=2.0.0",
    "django-extensions>=4.1",
    "django-revision>=1.0.0",
    "pycryptodomex>=3.23.0",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/erikvw/django-crypto-fields"
Documentation = "https://django-crypto-fields.readthedocs.io/en/latest/"
Repository = "https://github.com/erikvw/django-crypto-fields.git"
Changelog = "https://github.com/erikvw/django-crypto-fields/blob/main/CHANGES"

[dependency-groups]
lint = [
    "ruff>=0.12.5"
]

docs = [
    "furo>=2025.7.19",
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "sphinx-inline-tabs>=2023.4.21",
]
test = [
    "coverage>=7.10.1",
    "tox-uv>=1.26.2",
    "edc-test-settings",
]

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py312"
exclude = ["migrations", ".tox", ".venv"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C90",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FURB",
    "I",
    "INT",
    "N",
    "PD",
    "PERF",
    "PL",
    "PLR",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
    # "FIX",
]
ignore = ["DJ008", "DJ007", "DJ006", "COM812", "PLC0206"]

[tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
parallel = false
branch = true
source = ["django_crypto_fields"]

[tool.coverage.paths]
source = ["django_crypto_fields"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["requirements.txt"]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.uv.sources]
django-crypto-fields = { workspace = true }
django-audit-fields = { path = "../django-audit-fields", editable = true }
django-revision = { path = "../django-revision", editable = true }
