[metadata]
name = django-crypto-fields
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = http://github.com/erikvw/django-crypto-fields
license = GPL license, see LICENSE
description = Add encrypted field classes and more to your Django models.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django Edc fields encryption security
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.11
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pycryptodomex
    django-audit-fields
    edc-utils
    edc-model-fields
    django-extensions

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    django_crypto_fields.tests*

[flake8]
ignore = E226,W503,E203,W605
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
